--- a/InflationMeter/package.json
+++ b/InflationMeter/package.json
@@ -90,6 +90,7 @@
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.0",
     "dayjs": "1.11.5",
+    "g": "^2.0.1",
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
     "rxjs": "7.5.6",
@@ -101,7 +102,7 @@
     "@angular-builders/jest": "14.0.1",
     "@angular-devkit/build-angular": "14.2.1",
     "@angular-eslint/eslint-plugin": "14.0.3",
-    "@angular/cli": "14.2.1",
+    "@angular/cli": "^14.2.7",
     "@angular/compiler-cli": "14.2.0",
     "@angular/service-worker": "14.2.0",
     "@types/jest": "28.1.8",
